fix(mail(css)): respect white spaces in plaintext messages
Fixes #5069

--- a/UI/WebServerResources/scss/views/MailerUI.scss
+++ b/UI/WebServerResources/scss/views/MailerUI.scss
@@ -266,6 +266,10 @@ md-sidenav {
   }
 }
 
+.mailer_plaincontent {
+  white-space: pre-wrap;
+}
+
 .mailer_htmlcontent {
   // Constrain absolute-positioned child elements to this element
   position: relative;
